--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "url-loader": "^3.0.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.11"
   }
